# esptools

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  clippy.toml  tree.txt
.github/workflows/: build-espnvs.yml  build_esp-idf-nvs-partition-gen.yml  ci.yml  publish.yml
src/: lib.rs  main.rs  zippedtools.rs
